# karbonlens

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  KarbonLens.html  LICENSE  NOTICE  README.md  SECURITY.md  _verify-map.mjs  _verify-map2.mjs  drizzle.config.ts  index.html  instrumentation-client.ts  instrumentation.ts  middleware.ts  netlify.toml  next.config.ts  package-lock.json  package.json  proxy.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
scrapers/: .gitignore  README.md  pyproject.toml
scrapers/common/: config.py  db.py  logging.py
scrapers/gfw/: fetch.py
scrapers/idxcarbon/: fetch_monthly.py  parse_pdf.py
scrapers/migrations/: 001_init.sql  002_add_geostore.sql  003_normalize_status.sql  004_add_digested_at.sql  005_admin_actions.sql  006_project_descriptions.sql  007_news_posts.sql  008_seo_tracking.sql  009_news_post_kinds.sql  010_news_posts_kind_date_weekly_wrap_only.sql  011_seo_tables_owner_karbonlens.sql  012_seo_autopilot_jobs.sql  013_news_post_author.sql  014_seo_jobs_review_states.sql  015_news_post_market_report_kind.sql  016_carbon_news_items.sql  017_news_brief_job_kind.sql  018_regulatory_job_type.sql  019_news_post_analysis_kind.sql
scrapers/scoring/: compute.py  weights.py
scrapers/scripts/: env.template  install-crontab.sh  karbonlens-app.service  karbonlens.crontab  logrotate.conf  nginx-karbonlens.com.conf  pg-backup.sh  pg-cron.conf  pg-restore-drill.sh  run_daily_score.sh  run_monthly_idxcarbon.sh  run_weekly_digest.sh  run_weekly_gfw.sh  run_weekly_verra.sh
scrapers/verra/: fetch.py  (+1 more)
(+315 files in other folders)
