[project]
name = "karbonlens-scrapers"
version = "0.1.0"
description = "Python scrapers for KarbonLens (Verra, GFW, IDXCarbon, scoring)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5",
    "shapely>=2",
    "pyproj>=3.6",
    "pdfplumber>=0.11",
    "structlog>=24",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "verra"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
